添加语法分析器生成工具
Signed-off-by: Simakeng <Simakeng@outlook.com>

--- a/compiler.vcxproj
+++ b/compiler.vcxproj
@@ -157,6 +157,7 @@
     <ClCompile Include="main.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="ASM-IR.h" />
     <ClInclude Include="AssemblyGeneration.h" />
     <ClInclude Include="Lex.h" />
     <ClInclude Include="LexParser.h" />
