--- a/compiler.vcxproj.filters
+++ b/compiler.vcxproj.filters
@@ -14,6 +14,9 @@
     <Filter Include="AssemblyGeneration">
       <UniqueIdentifier>{e5379895-a935-4f65-9384-dd13ecb995c0}</UniqueIdentifier>
     </Filter>
+    <Filter Include="ASM-IR">
+      <UniqueIdentifier>{e713672d-064c-419a-903c-87bc85dac6c2}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="main.cpp" />
@@ -23,7 +26,9 @@
     <ClCompile Include="Logger.cpp">
       <Filter>Logger</Filter>
     </ClCompile>
-    <ClCompile Include="AssemblyGeneration.cpp" />
+    <ClCompile Include="AssemblyGeneration.cpp">
+      <Filter>AssemblyGeneration</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Lex.h">
@@ -37,6 +42,9 @@
     </ClInclude>
     <ClInclude Include="AssemblyGeneration.h">
       <Filter>AssemblyGeneration</Filter>
+    </ClInclude>
+    <ClInclude Include="ASM-IR.h">
+      <Filter>ASM-IR</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
