修改LL1文法以匹配输入词串
Signed-off-by: Simakeng <Simakeng@outlook.com>

--- a/compiler.vcxproj
+++ b/compiler.vcxproj
@@ -155,6 +155,7 @@
     <ClCompile Include="LexParser.cpp" />
     <ClCompile Include="Logger.cpp" />
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="Parser.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="ASM-IR.h" />
@@ -162,6 +163,7 @@
     <ClInclude Include="Lex.h" />
     <ClInclude Include="LexParser.h" />
     <ClInclude Include="Logger.h" />
+    <ClInclude Include="Parser.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
