添加表达式编译期求值功能，完善语法树
Signed-off-by: Simakeng <Simakeng@outlook.com>

--- a/compiler.vcxproj
+++ b/compiler.vcxproj
@@ -157,6 +157,7 @@
   <ItemGroup>
     <ClCompile Include="AssemblyGeneration.cpp" />
     <ClCompile Include="ASTUtils.cpp" />
+    <ClCompile Include="IR.cpp" />
     <ClCompile Include="LexParser.cpp" />
     <ClCompile Include="Logger.cpp" />
     <ClCompile Include="main.cpp" />
